# isu4-auto

./: script.py  Анализ игры.docx  концепция.pptx
concept/: concept.pptx  Техническое описание Экспертной системы принятия решений для ИЭС.docx
expertsystem/: pyproject.toml
expertsystem/expertsystem/: __main__.py  main.py  myparser.py  parser.py  prices_test.py  qt_add_object.py  qt_dialog_add_object.py  qt_dialog_new_objects.py  qt_main.py  qt_main_old.py  qt_new_objects.py
expertsystem/expertsystem/ui/: qt_dialog_add_object.ui  qt_dialog_new_objects.ui  qt_main.ui
expertsystem/tests/: test_parser.py
