[tool.poetry]
name = "expertsystem"
version = "0.1.0"
description = ""
authors = ["L140-beep <maxim.klypin@polyus-nt.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
pandas = "^2.1.1"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
